--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# data files 
+*.zip 
+*.tif 
+*.h5 
+
+# .gitignore file 
+.gitignore
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
