working version of simulated field of view w spots
Major:
 - rewrote and tested image_components.py such that we can now simulate 2D images containing point-limited fluorescence. PSFs are modeled as Gaussians. Supports adding simulated camera noise. (Thanks to David Baddeley for help with the latter).
 - added tests and methods for easily running tests from command line (see endocytosis.tests.__init__.py)
 - reörganized test package structure

Minor:
 - moved camera.yaml and camera_spec.yaml to test subfolder, 'simulation'

--- a/endocytosis/test/simulation/data/camera.yaml
+++ b/endocytosis/test/simulation/data/camera.yaml
@@ -4,8 +4,7 @@ X-7291: !YAMLDict
   numGainElements: 592
   quantum_efficiency: 0.87
   serial_number: X-7291
-  specs: 
-    !YAMLCameraSpec
+  specs: !YAMLDict
     EM Gain On: !YAMLDict
       10MHz: !YAMLDict
         3: !YAMLDict {TrueEMGain: 0.0, electronsPerCount: 4.58, readoutNoise: 63.16} # TrueEMGain not measured
@@ -21,8 +20,7 @@ X-9309: !YAMLDict
   numGainElements: 592
   quantum_efficiency: 0.87
   serial_number: X-9309
-  specs: 
-    !YAMLCameraSpec
+  specs: !YAMLDict
     EM Gain On: !YAMLDict
       10MHz: !YAMLDict
         1: !YAMLDict {TrueEMGain: 0.0, electronsPerCount: 4.58, readoutNoise: 63.16} # TrueEMGain not measured
