Added data simulation example
Major:
 - Debugging and an example script, saved in 'examples' top-level folder

Minor:
 - changed cygauss2D data types to 'float' and 'int' (numpy equivalent of float32 and int16, respectively).

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include *.txt
 include *.rst
-include endocytosis/test/data/*.yaml
+include endocytosis/test/simulation/data/*
+include endocytosis/test/image/data/*
