--- a/endocytosis/config/config.yaml
+++ b/endocytosis/config/config.yaml
@@ -1,8 +1,56 @@
 !YAMLDict
-data: !YAMLDict
-  image: !YAMLDict {cropped_image_size: 64, normalize: true, pixel_max: 1.0, pixel_min: 0.0,
-    random_crop: true}
-  roi: !YAMLDict {roi_attribute_name: centroid, roi_side_length: 11}
-simulation: !YAMLDict {}
-train: !YAMLDict {batch_size: 128, gamma: 0.1, learning_rate: 0.001, momentum: 0.9,
-  weight_decay: 0.0005}
+MASK_CUTOFF: 0.3
+LOSS_RATIO: 2.
+TRAIN: !YAMLDict
+  OPTIMIZER: !YAMLDict 
+    Adam: !YAMLDict
+      lr: 0.001
+      betas: 
+        - 0.9
+        - 0.999
+      eps: 0.00000001
+      weight_decay: 0
+      amsgrad: False
+    SGD: !YAMLDict
+      lr: 0.001
+      momentum: 0.9
+      dampening: 0
+      weight_decay: 0
+      nesterov: False
+  BATCH_SIZE: 4
+  BOTTOM_OUT_PLANES: 64
+  SIMULATED: !YAMLDict
+    ROI_ATTRIBUTE_NAME: centroid
+    RANDOM_CROP: False
+    CROPPED_IMAGE_SIZE: 128
+    NORMALIZE_IMAGE_DATA: True
+    IMAGE_DATA_MEAN: 0.0
+    IMAGE_DATA_STDEV: 1.0
+  RESNET: !YAMLDict
+    resnet50: !YAMLDict
+      DOWN: !YAMLDict
+        LAYERS:
+          - 2
+          - 3
+          - 6
+        STRIDE:
+          - 2
+          - 2
+          - 2
+        MULTIPLIER:
+          - 2
+          - 4
+          - 8
+      UP: !YAMLDict
+        LAYERS: 
+          - 3
+          - 2
+          - 2
+        STRIDE:
+          - 2
+          - 2
+          - 4
+        MULTIPLIER:
+          - 0.5
+          - 0.125
+          - 0.03125
